fixed overflowing title on blogModal

--- a/src/App.css
+++ b/src/App.css
@@ -1678,7 +1678,8 @@ body {
 }
 
 .blogModal h1 {
-  margin: 40px 0 10px 0;
+  margin: 40px 0 20px 0;
+  width: 80%;
 }
 .blogModal img {
   width: 80%;
